2006-02-17  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up versioon to 0.7.0 for release

2006-02-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links to the new network status icon
	names, for the old gnome-netstatus icon names

2006-02-14  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add some links for NetworkManager icons

2006-02-07  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.8 for release

2006-02-07  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add font-x-generic icon and links to it
	Link gnome-mime-text-x-sh to text-x-script
	Link gnome-mime-text-x-vcard to x-office-address-book
	Link gnome-mime-text-x-vcalendar to x-office-calendar
	Link ximian-evolution-calendar to office-calendar
	Link ximian-evolution-emvail to internet-mail

2006-02-07  Rodney Dawes  <dobey@novell.com>

	* icon-name-mapping.pl.in (tls_map_icons): Don't use an elsif for the
	linking of .icon files, as they need to always be checked for

	* legacy-icon-mapping.xml: Add a link for the volume-knob icon used
	by the GNOME mixer applet to multimedia-volume-control

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5834

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.7 for release

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gtk-file as link to text-x-preview
	Add process-idle for backward compat with gnome-spinner-rest

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add mappings for media-jaz and media-zip
	and link the related gnome-dev-* icons to them

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=328606 and
	https://bugs.freedesktop.org/show_bug.cgi?id=5794

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mappping.xml: Add a link for the application/xhtml+xml
	mime type to be handled properly in GNOME and use the text-html icon