@@ -624,11 +624,9 @@
 	</icon>
 	<icon name="network-wired">
 	    <link>gnome-dev-ethernet</link>
-	    <link>nm-device-wired</link>
 	</icon>
 	<icon name="network-wireless">
 	    <link>gnome-dev-wavelan</link>
-	    <link>nm-device-wireless</link>
 	</icon>
 	<icon name="printer">
 	    <link>gnome-dev-printer</link>
@@ -922,6 +920,9 @@
 	</icon>
 	<icon name="network-idle">
 	    <link>gnome-netstatus-idle</link>
+	    <link>nm-adhoc</link>
+	    <link>nm-device-wired</link>
+	    <link>nm-device-wireless</link>
 	</icon>
 	<icon name="network-offline">
 	    <link>gnome-netstatus-disconn</link>
@@ -938,6 +939,17 @@
 	</icon>
 	<icon name="network-wireless-encrypted">
 	    <link>gnome-dev-wavelan-encrypted</link>
+	</icon>
+	<icon name="network-wireless-high">
+	    <link>nm-signal-100</link>
+	    <link>nm-signal-75</link>
+	</icon>
+	<icon name="network-wireless-low">
+	    <link>nm-signal-00</link>
+	    <link>nm-signal-25</link>
+	</icon>
+	<icon name="network-wireless-medium">
+	    <link>nm-signal-50</link>
 	</icon>
 	<icon name="user-trash-full">
 	    <link>gnome-fs-trash-full</link>
